# document_intelligence_refinery

./: .gitignore  DOMAIN_NOTES.md  Dockerfile  GITHUB_PUSH.md  README.md  README_COLAB.md  TRP1 Challenge Week 3_ The Document Intelligence Refinery.md  app_ui.py  pyproject.toml  run_refinery_interim.ipynb
"/home/zumi/Documents/10 Academy Training/Week 3/document_intelligence/rubric/: extraction_rules.yaml"
data/: CORPUS_MANIFEST.md
rubric/: extraction_rules.yaml
scripts/: audit_claim.py  export_quality_examples.py  phase0_docling_analysis.py  phase0_pdfplumber_analysis.py  phase0_pdfplumber_results.txt  run_final_artifacts.py  run_interim_artifacts.py
src/agents/: __init__.py  chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/data/: __init__.py  audit.py  fact_table.py  vector_store.py
src/models/: __init__.py  extracted.py  ldu.py  page_index.py  profile.py  provenance.py
src/strategies/: __init__.py  base.py  fast_text.py  layout.py  vision.py
tests/: __init__.py  test_chunker.py  test_extraction_confidence.py  test_triage.py
